# PromptToCommand

./: .gitignore  =0.26.0  MANIFEST.in  README.md  model_downloader.py  requirements.txt  setup.cfg  setup.py
..bfg-report/2025-02-02/15-37-10/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-02-02/15-37-10/protected-dirt/: 26b70f59-HEAD.csv
bourguiba/: bourguiba.py  instruction.py  model_downloader.py
bourguiba.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bourguibaGPT/: main.py
src/bourguibagpt/: __init__.py  bourguibaB.py  bourguibaT.py  config.py  main.py  validators.py  windows.py
src/bourguibagpt/models/: __init__.py  base.py  large.py  medium.py  tiny.py
src/bourguibagpt/utils/: memory.py  system.py
src/old/: bourguibaM.py
