[metadata]
   name = bourguiba
   version = 2.2.8
   description = A package for generating shell commands from natural language descriptions
   long_description = file: README.md
   long_description_content_type = text/markdown
   author = si mohamed aziz bahloul wo chrikou mehdi magroun
   author_email = azizbahloul3@gmail.com
   url = https://github.com/AzizBahloul/PromptToCommand
   classifiers =
       Programming Language :: Python :: 3
       License :: OSI Approved :: MIT License
       Operating System :: OS Independent

   [options]
   packages = find:
   python_requires = >=3.6
   install_requires =
       torch
       transformers
       textblob