[metadata]
name = bourguibagpt
version = 2.0.0
author = Si Aziz Bahloul
author_email = azizbahloul3@gmail.com
description = Tunisian Shell Command Assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AzizBahloul/PromptToCommand
license = MIT
license_files = LICENSE  # Add this line
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    rich>=13.6.0
    requests>=2.25.0
    psutil>=5.9.0
    inquirer>=3.1.0
    tqdm>=4.65.0

include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bourguibagpt = bourguibagpt.main:main

[settings]
python.defaultInterpreterPath = python3
python.linting.enabled = true